--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -12,10 +12,10 @@
             </div>
             <form [formGroup]="loginForm">
                 <div class="mb-3 row">
-                    <label for="email" class="col-sm-12 col-form-label">E-mail</label>
+                    <label for="email" class="col-sm-12 col-form-label">Staff ID</label>
                     <div class="col-sm-12">
-                        <input formControlName="email" type="text" class="form-control" name="email" id="email"
-                            placeholder="aaaa@xxx.com">
+                        <input formControlName="staff_id" type="text" class="form-control" name="staff_id" id="staff_id"
+                            placeholder="">
                     </div>
                 </div>
                 <div class="mb-3 row">
