--- a/src/app/components/pages/member/member.component.html
+++ b/src/app/components/pages/member/member.component.html
@@ -1,1 +1,55 @@
-<p>member works!</p>
+<div class="row mt-3">
+    <div class="h1">All Member</div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-12">
+      <div class="container">
+        <form > 
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">MemberID</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="book_id" placeholder="MemberID">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">name</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="name" placeholder="name">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">group</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="group" placeholder="group">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="price" class="col-sm-3 col-form-label">address</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control"  formControlName="address" placeholder="address">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="unitInStock" class="col-sm-3 col-form-label">phoneNumber</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control"  formControlName="phoneNumber" placeholder="phoneNumber">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="unitInStock" class="col-sm-3 col-form-label">type</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control"  formControlName="type" placeholder="type">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <div class="offset-sm-3 col-sm-10">
+              <button type="submit" class="btn btn-primary" >
+                Save
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  
