--- a/src/app/components/pages/book/book.component.html
+++ b/src/app/components/pages/book/book.component.html
@@ -1,1 +1,45 @@
-<p>book works!</p>
+<div class="row mt-3">
+    <div class="col-md-12" style="text-align: right;">
+        <a routerLink="/book/addbook" class="btn btn-success">Add New Book</a>
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="h1">All Book</div>
+    <form class="input-group my-3" [formGroup]="searchForm">
+        <input type="text" class="form-control" placeholder="Book Name" formControlName="searchTitle" />
+        <button class="input-group-text btn btn-primary" (click)="searchTitle()">Search</button>
+    </form>
+    <div class="col-md-12 mt-2">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>BookID</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>publisher</th>
+                    <th>price</th>
+                    <th>day borrow</th>
+                    <th>Manage</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let b of books">
+                    <td>{{b.book_id}}</td>
+                    <td>{{b.title}}</td>
+                    <td>{{b.author}}</td>
+                    <td>{{b.publisher}}</td>
+                    <td>{{b.price}}</td>
+                    <td>7</td>
+                    <td>
+                        <a routerLink="/book/edit/{{b._id}}" class="btn btn-info btn-sm">
+                            Edit
+                        </a> &nbsp;
+                        <a  class="btn btn-danger btn-sm" (click)="deleteBook(b._id)">
+                            Delete
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
