--- a/src/app/components/pages/staff/staff.component.html
+++ b/src/app/components/pages/staff/staff.component.html
@@ -1,1 +1,43 @@
-<p>staff works!</p>
+<div class="row mt-3">
+    <div class="h1">All Staff</div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-md-12">
+      <div class="container">
+        <form > 
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">StaffID</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="book_id" placeholder="StaffID">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">name</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="name" placeholder="name">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="name" class="col-sm-3 col-form-label">address</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" formControlName="address" placeholder="address">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <label for="unitInStock" class="col-sm-3 col-form-label">phoneNumber</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control"  formControlName="phoneNumber" placeholder="phoneNumber">
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <div class="offset-sm-3 col-sm-10">
+              <button type="submit" class="btn btn-primary" >
+                Save
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  
