--- a/src/app/components/shared/navigation/navigation.component.html
+++ b/src/app/components/shared/navigation/navigation.component.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" routerLink="/borrow">Borrow</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/product">Member</a>
+                    <a class="nav-link" routerLink="/member">Member</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/staff">Staff</a>
